@@ -9,7 +9,7 @@
  * if $timeout is 'default', $wgHTTPTimeout is used
  */
 function wfGetHTTP( $url, $timeout = 'default' ) {
-	global $wgHTTPTimeout, $wgHTTPProxy, $wgVersion;
+	global $wgHTTPTimeout, $wgHTTPProxy, $wgVersion, $wgTitle, $wgCommandLineMode;
 
 	# Use curl if available
 	if ( function_exists( 'curl_init' ) ) {
@@ -25,6 +25,16 @@ function wfGetHTTP( $url, $timeout = 'default' ) {
 		}
 		curl_setopt( $c, CURLOPT_TIMEOUT, $timeout );
 		curl_setopt( $c, CURLOPT_USERAGENT, "MediaWiki/$wgVersion" );
+
+		# Set the referer to $wgTitle, even in command-line mode
+		# This is useful for interwiki transclusion, where the foreign
+		# server wants to know what the referring page is.
+		# $_SERVER['REQUEST_URI'] gives a less reliable indication of the 
+		# referring page.
+		if ( is_object( $wgTitle ) ) {
+			curl_setopt( $c, CURLOPT_REFERER, $wgTitle->getFullURL() );
+		}
+
 		ob_start();
 		curl_exec( $c );
 		$text = ob_get_contents();
